--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "iransbankicon": "^1.0.1",
     "lucide-react": "^0.482.0",
     "next": "^15.2.4",
     "next-auth": "^4.24.11",
